--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,7 +56,7 @@
   --background: oklch(0.9597 0.0157 154.47);
   --foreground: oklch(0.5845 0.1164 151.9);
   --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
+  --card-foreground: #3d8f58;
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: #3d8f58;
@@ -89,17 +89,17 @@
 .dark {
   --background: oklch(0.2218 0.0141 154.05);
   --foreground: oklch(0.7287 0.1393 152.21);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
+  --card: #1a231d;
+  --card-foreground: #59c07b;
+  --popover: #161D18;
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
+  --primary: #59c07b;
   --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
+  --accent: #39463e;
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
